🐛 Refreshing the knowledge base or Agent configuration page will return to the model configuration page.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -251,9 +251,9 @@
   "setup.header.button.back": "Back to Home",
   "setup.header.title": "Quick Setup",
   "setup.header.description": "Smartly build any assistant, accurately solve every challenge",
-  "setup.model.description": "Configure AI models for your assistant",
-  "setup.knowledge.description": "Set up knowledge base and data sources",
-  "setup.agent.description": "Configure agent behavior and capabilities",
+  "setup.model.description": "Configure models",
+  "setup.knowledge.description": "Set up knowledge base",
+  "setup.agent.description": "Configure agent",
   "setup.navigation.button.previous": "Previous",
   "setup.navigation.button.next": "Next",
   "setup.navigation.button.complete": "Complete Setup",
