--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -251,6 +251,9 @@
   "setup.header.button.back": "返回首页",
   "setup.header.title": "快速配置",
   "setup.header.description": "智能生成每一种助手，精准解决每一个问题",
+  "setup.model.description": "模型配置",
+  "setup.knowledge.description": "知识库配置",
+  "setup.agent.description": "Agent配置",
   "setup.navigation.button.previous": "上一步",
   "setup.navigation.button.next": "下一步",
   "setup.navigation.button.complete": "完成配置",
