✨ 移除所有的副模型调用，知识库总结中供用户选择可使用的主模型

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -251,9 +251,6 @@
   "setup.header.button.back": "Back to Home",
   "setup.header.title": "Quick Setup",
   "setup.header.description": "Smartly build any assistant, accurately solve every challenge",
-  "setup.model.description": "Configure models",
-  "setup.knowledge.description": "Set up knowledge base",
-  "setup.agent.description": "Configure agent",
   "setup.navigation.button.previous": "Previous",
   "setup.navigation.button.next": "Next",
   "setup.navigation.button.complete": "Complete Setup",
@@ -482,6 +479,8 @@
   "document.summary.saveError": "Failed to save summary",
   "document.summary.saveFailed": "Save failed",
   "document.summary.title": "Knowledge Base Summary",
+  "document.summary.modelLabel": "Main Model",
+  "document.summary.modelPlaceholder": "Select Model",
   "document.status.creating": "Creating...",
   "document.status.loadingList": "Loading document list...",
   "document.input.knowledgeBaseName": "Please enter knowledge base name",
@@ -621,7 +620,6 @@
   "modelConfig.category.multimodal": "Multimodal Models",
   "modelConfig.category.voice": "Voice Models",
   "modelConfig.option.mainModel": "Main Model",
-  "modelConfig.option.secondaryModel": "Secondary Model",
   "modelConfig.option.embeddingModel": "Embedding Model",
   "modelConfig.option.multiEmbeddingModel": "Multimodal Embedding Model",
   "modelConfig.option.rerankerModel": "Reranker Model",
@@ -752,12 +750,12 @@
   "toolManagement.message.refreshFailed": "Failed to refresh tools list",
   "toolManagement.message.refreshFailedRetry": "Failed to refresh tools list, please try again later",
 
-  "debug.log.refreshToolsFailed": "Failed to refresh tools list:",
-  "debug.log.loadAgentDetailsFailed": "Failed to load Agent details:",
-  "debug.log.importAgentFailed": "Failed to import Agent:",
-  "debug.log.exportAgentFailed": "Failed to export Agent:",
-  "debug.log.deleteAgentFailed": "Failed to delete Agent:",
-  "debug.log.fetchAgentListFailed": "Failed to fetch Agent list:",
+  "debug.console.refreshToolsFailed": "Failed to refresh tools list:",
+  "debug.console.loadAgentDetailsFailed": "Failed to load Agent details:",
+  "debug.console.importAgentFailed": "Failed to import Agent:",
+  "debug.console.exportAgentFailed": "Failed to export Agent:",
+  "debug.console.deleteAgentFailed": "Failed to delete Agent:",
+  "debug.console.fetchAgentListFailed": "Failed to fetch Agent list:",
 
   "mcpConfig.modal.title": "MCP Server Configuration",
   "mcpConfig.modal.close": "Close",
