--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -251,9 +251,6 @@
   "setup.header.button.back": "返回首页",
   "setup.header.title": "快速配置",
   "setup.header.description": "智能生成每一种助手，精准解决每一个问题",
-  "setup.model.description": "模型配置",
-  "setup.knowledge.description": "知识库配置",
-  "setup.agent.description": "Agent配置",
   "setup.navigation.button.previous": "上一步",
   "setup.navigation.button.next": "下一步",
   "setup.navigation.button.complete": "完成配置",
@@ -361,7 +358,6 @@
   "toolConfig.input.array.placeholder": "请输入JSON数组",
   "toolConfig.input.object.placeholder": "请输入JSON对象",
   "toolConfig.model.main": "主模型",
-  "toolConfig.model.sub": "副模型",
 
   "toolPool.title": "选择 Agent 的工具",
   "toolPool.loading": "加载中...",
@@ -482,6 +478,8 @@
   "document.summary.saveError": "保存总结失败",
   "document.summary.saveFailed": "保存失败",
   "document.summary.title": "知识库总结",
+  "document.summary.modelLabel": "主模型",
+  "document.summary.modelPlaceholder": "选择模型",
   "document.status.creating": "创建中...",
   "document.status.loadingList": "正在加载文档列表...",
   "document.input.knowledgeBaseName": "请输入知识库名称",
@@ -590,7 +588,6 @@
   "model.group.custom": "自定义模型",
   "model.status.tooltip": "点击可验证连通性",
   "model.option.main": "主模型",
-  "model.option.sub": "副模型",
   "model.dialog.success.updateSuccess": "更新成功",
 
   "appConfig.appName.label": "应用名称",
@@ -620,7 +617,6 @@
   "modelConfig.category.multimodal": "多模态模型",
   "modelConfig.category.voice": "语音模型",
   "modelConfig.option.mainModel": "主模型",
-  "modelConfig.option.secondaryModel": "副模型",
   "modelConfig.option.embeddingModel": "向量模型",
   "modelConfig.option.multiEmbeddingModel": "多模态向量模型",
   "modelConfig.option.rerankerModel": "重排模型",
@@ -751,12 +747,12 @@
   "toolManagement.message.refreshFailed": "刷新工具列表失败",
   "toolManagement.message.refreshFailedRetry": "刷新工具列表失败，请稍后重试",
 
-  "debug.log.refreshToolsFailed": "刷新工具列表失败:",
-  "debug.log.loadAgentDetailsFailed": "加载Agent详情失败:",
-  "debug.log.importAgentFailed": "导入Agent失败:",
-  "debug.log.exportAgentFailed": "导出Agent失败:",
-  "debug.log.deleteAgentFailed": "删除Agent失败:",
-  "debug.log.fetchAgentListFailed": "获取 Agent 列表失败:",
+  "debug.console.refreshToolsFailed": "刷新工具列表失败:",
+  "debug.console.loadAgentDetailsFailed": "加载Agent详情失败:",
+  "debug.console.importAgentFailed": "导入Agent失败:",
+  "debug.console.exportAgentFailed": "导出Agent失败:",
+  "debug.console.deleteAgentFailed": "删除Agent失败:",
+  "debug.console.fetchAgentListFailed": "获取 Agent 列表失败:",
 
   "mcpConfig.modal.title": "MCP服务器配置",
   "mcpConfig.modal.close": "关闭",
