✨ Can specify the model when configuring the agent.

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -642,6 +642,7 @@
   "businessLogic.placeholder": "请描述您的业务场景和需求...",
   "businessLogic.config.title": "配置Agent能力",
   "businessLogic.config.model": "模型",
+  "businessLogic.config.modelPlaceholder": "请选择模型",
   "businessLogic.config.maxSteps": "Agent运行最大步骤数",
   "businessLogic.config.button.generatePrompt": "生成智能体",
   "businessLogic.config.button.generating": "智能生成提示词中...",
@@ -653,13 +654,14 @@
   "businessLogic.config.message.agentCreated": "Agent {{name}} {{action}}成功",
   "businessLogic.config.message.completeAgentInfo": "请完善Agent信息",
   "businessLogic.config.message.generatePromptFirst": "请先生成系统提示词",
+  "businessLogic.config.message.selectModelRequired": "请选择模型",
+  "businessLogic.config.message.businessDescriptionRequired": "请先输入业务描述",
   "businessLogic.config.message.generateSuccess": "智能体提示词生成成功",
   "businessLogic.config.message.generateError": "智能体提示词生成失败",
   "businessLogic.config.error.noAgentId": "无法继续：未设置Agent ID",
   "businessLogic.config.error.nameEmpty": "Agent名称不能为空",
   "businessLogic.config.error.saveFailed": "Agent保存失败",
   "businessLogic.config.error.saveRetry": "Agent保存失败，请稍后重试",
-  "businessLogic.config.error.businessDescriptionRequired": "请先输入业务描述",
   "businessLogic.config.error.agentImportFailed": "Agent导入失败",
   "businessLogic.config.error.agentDeleteFailed": "Agent删除失败",
   "businessLogic.config.error.agentImportSuccess": "Agent导入成功",
