🐛 edit translate key

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -261,7 +261,7 @@
   "setup.page.error.saveConfig": "保存配置失败，请重试",
   "setup.page.error.missingModelConfig": "未找到模型配置，请联系管理员先完成模型配置",
   "setup.page.error.systemError": "系统异常，请稍后重试",
-  "setup.page.error.selectMainModel": "请选择主模型",
+  "setup.page.error.selectMainModel": "请选择模型",
   "setup.page.error.highlightField.llmMain": "llm.main",
   "setup.page.error.adminOnly": "只有管理员可以访问模型配置页面",
 
@@ -358,7 +358,6 @@
   "toolConfig.input.string.placeholder": "请输入{{name}}",
   "toolConfig.input.array.placeholder": "请输入JSON数组",
   "toolConfig.input.object.placeholder": "请输入JSON对象",
-  "toolConfig.model.main": "主模型",
 
   "toolPool.title": "选择 Agent 的工具",
   "toolPool.loading": "加载中...",
@@ -479,7 +478,7 @@
   "document.summary.saveError": "保存总结失败",
   "document.summary.saveFailed": "保存失败",
   "document.summary.title": "知识库总结",
-  "document.summary.modelLabel": "主模型",
+  "document.summary.modelLabel": "模型",
   "document.summary.modelPlaceholder": "选择模型",
   "document.status.creating": "创建中...",
   "document.status.loadingList": "正在加载文档列表...",
@@ -583,12 +582,11 @@
   "model.source.openai": "OpenAI",
   "model.source.silicon": "硅基流动",
   "model.warning.updateNotFound": "未找到要更新的模型: {{displayName}}, 类型: {{type}}",
-  "model.type.main": "主模型",
+  "model.type.main": "模型",
   "model.select.placeholder": "选择模型",
   "model.group.modelEngine": "ModelEngine模型",
   "model.group.custom": "自定义模型",
   "model.status.tooltip": "点击可验证连通性",
-  "model.option.main": "主模型",
   "model.dialog.success.updateSuccess": "更新成功",
 
   "appConfig.appName.label": "应用名称",
@@ -617,7 +615,7 @@
   "modelConfig.category.reranker": "重排模型",
   "modelConfig.category.multimodal": "多模态模型",
   "modelConfig.category.voice": "语音模型",
-  "modelConfig.option.mainModel": "主模型",
+  "modelConfig.option.mainModel": "模型",
   "modelConfig.option.embeddingModel": "向量模型",
   "modelConfig.option.multiEmbeddingModel": "多模态向量模型",
   "modelConfig.option.rerankerModel": "重排模型",
