--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -260,7 +260,7 @@
   "setup.page.error.saveConfig": "Failed to save configuration, please try again",
   "setup.page.error.missingModelConfig": "Model configuration not found, please contact the administrator",
   "setup.page.error.systemError": "System error, please try again later",
-  "setup.page.error.selectMainModel": "Please select the main model",
+  "setup.page.error.selectMainModel": "Please select model",
   "setup.page.error.highlightField.llmMain": "llm.main",
   "setup.page.error.adminOnly": "Only administrators can access the model configuration page",
 
@@ -357,8 +357,6 @@
   "toolConfig.input.string.placeholder": "Please enter {{name}}",
   "toolConfig.input.array.placeholder": "Please enter JSON array",
   "toolConfig.input.object.placeholder": "Please enter JSON object",
-  "toolConfig.model.main": "Main Model",
-  "toolConfig.model.sub": "Sub Model",
 
   "toolPool.title": "Select tools",
   "toolPool.loading": "Loading...",
@@ -479,7 +477,7 @@
   "document.summary.saveError": "Failed to save summary",
   "document.summary.saveFailed": "Save failed",
   "document.summary.title": "Knowledge Base Summary",
-  "document.summary.modelLabel": "Main Model",
+  "document.summary.modelLabel": "Model",
   "document.summary.modelPlaceholder": "Select Model",
   "document.status.creating": "Creating...",
   "document.status.loadingList": "Loading document list...",
@@ -585,13 +583,11 @@
   "model.source.silicon": "Silicon Flow",
   "model.source.unknown": "Unknown Source",
   "model.warning.updateNotFound": "Model not found for update: {{displayName}}, type: {{type}}",
-  "model.type.main": "Main Model",
+  "model.type.main": "LLM Model",
   "model.select.placeholder": "Select Model",
   "model.group.modelEngine": "ModelEngine Models",
   "model.group.custom": "Custom Models",
   "model.status.tooltip": "Click to verify connectivity",
-  "model.option.main": "Main Model",
-  "model.option.sub": "Sub Model",
 
   "appConfig.appName.label": "Application Name",
   "appConfig.appName.placeholder": "Please enter your application name",
@@ -619,7 +615,7 @@
   "modelConfig.category.reranker": "Reranker Models",
   "modelConfig.category.multimodal": "Multimodal Models",
   "modelConfig.category.voice": "Voice Models",
-  "modelConfig.option.mainModel": "Main Model",
+  "modelConfig.option.mainModel": "LLM Model",
   "modelConfig.option.embeddingModel": "Embedding Model",
   "modelConfig.option.multiEmbeddingModel": "Multimodal Embedding Model",
   "modelConfig.option.rerankerModel": "Reranker Model",
