♻️ Improvement: Warn the user trying to proceed when embedding model is not set in knowledgebase/agent page. ♻️ Improvement: Warn the user and close the memory function when embedding model is not set. ♻️ Improvement: Automatically unselect knowledgebases or agent tools that are no longer supported after embedding model changed. ✨ Now memory service automatically switch indices when embedding model is changed.

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -834,20 +834,35 @@
   "agentConfig.error.fetchAgentDetailsFailed": "获取Agent详情失败，请稍后重试",
   "agentConfig.error.fetchAgentCallRelationshipFailed": "获取Agent调用关系失败，请稍后重试",
 
-  "embedding.emptyWarningModal.title": "未选择Embedding模型",
-  "embedding.emptyWarningModal.content": "您未选择 Embedding 模型，后续知识库配置、记忆功能、知识检索工具以及其他部分 Agent 工具将无法使用。",
-  "embedding.emptyWarningModal.tip": "建议您在模型配置中选择合适的 Embedding 模型，以获得完整体验。",
+  "embedding.emptyWarningModal.title": "未选择向量化模型",
+  "embedding.emptyWarningModal.content": "您未选择向量化模型，后续知识库配置、记忆功能、知识检索工具以及其他部分 Agent 工具将无法使用。",
+  "embedding.emptyWarningModal.tip": "建议您在模型配置中选择合适的向量化模型，以获得完整体验。",
   "embedding.emptyWarningModal.cancel": "返回配置",
   "embedding.emptyWarningModal.ok_continue": "我知道了，继续下一步",
-  "embedding.unavaliableWarningModal.title": "Embedding 模型连通性未确认",
-  "embedding.unavaliableWarningModal.content": "您选择的 Embedding 模型尚未确认连通。强行继续可能导致后续知识库创建、记忆生成、Agent工具调用等功能出现无法预知的错误，影响您的正常体验。",
+  "embedding.unavaliableWarningModal.title": "向量化模型连通性未确认",
+  "embedding.unavaliableWarningModal.content": "您选择的向量化模型尚未确认连通。强行继续可能导致后续知识库创建、记忆生成、Agent工具调用等功能出现无法预知的错误，影响您的正常体验。",
   "embedding.unavaliableWarningModal.tip": "建议您等待连通性检测完成后再继续操作。",
   "embedding.unavaliableWarningModal.cancel": "返回配置",
   "embedding.unavaliableWarningModal.ok": "我知道了，继续下一步",
-  "embedding.modifyWarningModal.title": "修改 Embedding 模型",
-  "embedding.modifyWarningModal.content": "您正在尝试修改已生效的 Embedding 模型配置。这会导致先前使用该模型清洗的文件、创建的知识库、生成的记忆条目等均被暂时禁用。",
+  "embedding.modifyWarningModal.title": "修改向量化模型",
+  "embedding.modifyWarningModal.content": "您正在尝试修改已生效的向量化模型配置。这会导致先前使用该模型清洗的文件、创建的知识库、生成的记忆条目等均被暂时禁用。",
   "embedding.modifyWarningModal.ok_proceed": "立即修改",
   "embedding.modifyWarningModal.cancel": "取消",
+  "embedding.knowledgeBaseDisabledWarningModal.title": "您尚未配置向量化模型，暂时无法使用知识库功能。",
+  "embedding.knowledgeBaseAutoDeselectModal.title": "自动移除不兼容知识库",
+  "embedding.knowledgeBaseAutoDeselectModal.content": "由于您已修改向量化模型配置，已自动取消选中不兼容的知识库。",
+  "embedding.agentToolAutoDeselectModal.title": "自动移除无法使用的 Agent 工具",
+  "embedding.agentToolAutoDeselectModal.content": "由于您尚未配置向量化模型，已自动取消选中无法使用的 Agent 工具。",
+  "embedding.chatMemoryWarningModal.title": "向量化模型未配置",
+  "embedding.chatMemoryWarningModal.content": "您尚未配置向量化模型，暂时无法使用记忆功能。",
+  "embedding.chatMemoryWarningModal.tip": "建议您联系您的租户管理员进行配置。",
+  "embedding.chatMemoryWarningModal.ok_config": "前往配置",
+  "embedding.chatMemoryWarningModal.ok": "取消",
+  "embedding.chatMemoryAutoDeselectModal.title": "自动关闭无法使用的记忆功能",
+  "embedding.chatMemoryAutoDeselectModal.content": "由于您尚未配置向量化模型，已自动关闭记忆功能。",
+  "embedding.chatMemoryAutoDeselectModal.tip": "建议您联系您的租户管理员进行配置。",
+  "embedding.chatMemoryAutoDeselectModal.ok_config": "前往配置",
+  "embedding.chatMemoryAutoDeselectModal.ok": "取消",
 
   "chatStreamMain.loadingConversation": "正在加载对话内容...",
   "chatStreamMain.loadError": "加载对话失败",
