🐛 BUGFIX,fix the problems of the last week commit 36131d005230f7c9ff33ceefe68d8f4fdfc6c129

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -253,6 +253,9 @@
   "setup.header.button.back": "Back to Home",
   "setup.header.title": "Quick Setup",
   "setup.header.description": "Smartly build any assistant, accurately solve every challenge",
+  "setup.model.description": "Model Configuration",
+  "setup.knowledge.description": "Knowledge Base Configuration",
+  "setup.agent.description": "Agent Configuration",
   "setup.navigation.button.previous": "Previous",
   "setup.navigation.button.next": "Next",
   "setup.navigation.button.complete": "Complete Setup",
