🎨 English knowledge base "embedding model not configured" message style not good 🎨 Unify the style of tooltip on agent config page 🐛 Bugfix: app config won't be correctly saved

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -849,13 +849,14 @@
   "embedding.modifyWarningModal.content": "You are attempting to modify an active Embedding model configuration. This will temporarily disable files previously cleaned with that model, created knowledge bases, and generated memory entries.",
   "embedding.modifyWarningModal.ok_proceed": "Modify now",
   "embedding.modifyWarningModal.cancel": "Cancel",
-  "embedding.knowledgeBaseDisabledWarningModal.title": "You have not configured an Embedding model, so knowledge base related features are currently unavailable.",
+  "embedding.knowledgeBaseDisabledWarningModal.title": "You have not configured an Embedding model. Knowledge base features are temporarily disabled.",
   "embedding.knowledgeBaseAutoDeselectModal.title": "Automatically Remove Incompatible Knowledge Bases",
   "embedding.knowledgeBaseAutoDeselectModal.content": "Due to your change of the Embedding configuration, the incompatible knowledge bases have been automatically removed.",
   "embedding.agentToolAutoDeselectModal.title": "Automatically Remove Unavailable Agent Tools",
   "embedding.agentToolAutoDeselectModal.content": "Due to not configuring the Embedding model, the unavailable agent tools have been automatically removed.",
+  "embedding.agentToolDisableTooltip.content": "You have not configured the Embedding model. This agent tool is disabled.",
   "embedding.chatMemoryWarningModal.title": "Embedding Model Not Configured",
-  "embedding.chatMemoryWarningModal.content": "You have not configured the Embedding model, so the memory function is currently unavailable.",
+  "embedding.chatMemoryWarningModal.content": "You have not configured the Embedding model. Memory functions are temporarily disabled.",
   "embedding.chatMemoryWarningModal.tip": "Please contact your tenant administrator for configuration.",
   "embedding.chatMemoryWarningModal.ok_config": "Configuration",
   "embedding.chatMemoryWarningModal.ok": "Cancel",
