🐛 Contribution wall is required when registering an administrator account

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -733,11 +733,17 @@
   "auth.unknownError": "Registration failed, please try again later",
   "auth.inviteCodeHint.title": "How to get administrator invite code?",
   "auth.inviteCodeHint.step1": "Go to our ",
-  "auth.inviteCodeHint.step2": "Join our ",
-  "auth.inviteCodeHint.step2Action": " and get your exclusive invite code",
+  "auth.inviteCodeHint.step2": "Visit our ",
+  "auth.inviteCodeHint.step3": "Join our ",
+  "auth.inviteCodeHint.starAction": " and give us a Star",
+  "auth.inviteCodeHint.step2Action": " leave a trace to become a co-creator",
+  "auth.inviteCodeHint.step3Action": " and get your exclusive invite code",
   "auth.inviteCodeHint.communityLink": "technical community",
   "auth.inviteCodeHint.projectLink": "project page",
-  "auth.inviteCodeHint.starAction": " and give us a Star",
+  "auth.inviteCodeHint.contributionWallLink": "contribution wall",
+  "auth.inviteCodeHint.contributionWallUrl": "https://github.com/ModelEngine-Group/nexent/blob/develop/doc/docs/en/opensource-memorial-wall.md",
+  "auth.inviteCodeHint.documentationUrl": "https://modelengine-group.github.io/nexent/en/contributing.html#%F0%9F%8C%9F-quick-memorial-wall-contribution",
+  "auth.inviteCodeHint.viewDocumentation": "View Documentation",
 
   "role_admin": "Admin",
 
