--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -733,11 +733,17 @@
   "auth.unknownError": "注册失败，请稍后重试",
   "auth.inviteCodeHint.title": "如何获取管理员邀请码？",
   "auth.inviteCodeHint.step1": "前往",
-  "auth.inviteCodeHint.step2": "加入",
-  "auth.inviteCodeHint.step2Action": "获取专属邀请码",
+  "auth.inviteCodeHint.step2": "前往",
+  "auth.inviteCodeHint.step3": "加入",
+  "auth.inviteCodeHint.starAction": "并为我们点一个 Star",
+  "auth.inviteCodeHint.step2Action": "留下痕迹成为共创者",
+  "auth.inviteCodeHint.step3Action": "获取专属邀请码",
   "auth.inviteCodeHint.communityLink": "官方技术交流群",
   "auth.inviteCodeHint.projectLink": "项目地址",
-  "auth.inviteCodeHint.starAction": "为我们点一个 Star",
+  "auth.inviteCodeHint.contributionWallLink": "贡献墙",
+  "auth.inviteCodeHint.contributionWallUrl": "https://github.com/ModelEngine-Group/nexent/blob/develop/doc/docs/zh/opensource-memorial-wall.md",
+  "auth.inviteCodeHint.documentationUrl": "https://modelengine-group.github.io/nexent/zh/contributing.html#%F0%9F%8C%9F-%E5%BC%80%E6%BA%90%E7%BA%AA%E5%BF%B5%E5%A2%99%E5%BF%AB%E9%80%9F%E8%B4%A1%E7%8C%AE",
+  "auth.inviteCodeHint.viewDocumentation": "查看说明文档",
 
   "role_admin": "管理员",
 
