✨ Now supports regular user account deletion ✨ Now deleting custom embedding model will also clear memories and elasticsearch vectors

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -716,6 +716,14 @@
   "auth.adminRegisterSuccessManualLogin": "🎉 Administrator account registration successful! Please log in to access admin privileges",
   "auth.logoutSuccess": "You have successfully logged out",
   "auth.logoutFailed": "Logout failed, please try again",
+  "auth.revoke": "Delete Account",
+  "auth.confirmRevoke": "Delete Account",
+  "auth.confirmRevokePrompt": "Are you sure you want to delete your account? This action cannot be undone!",
+  "auth.confirmRevokeOk": "Delete Anyway",
+  "auth.revokeSuccess": "Account deleted successfully",
+  "auth.revokeFailed": "Account deletion failed, please try again later",
+  "auth.refuseRevoke": "Delete Account",
+  "auth.refuseRevokePrompt": "Your role is tenant administrator. Account deletion for admin is not yet supported.",
   "auth.adminAccount": "Administrator Account",
   "auth.adminAccountDescription": "Administrators have more privileges to configure models, create agents, etc.",
   "auth.admin": "Admin",
