--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -716,6 +716,14 @@
   "auth.adminRegisterSuccessManualLogin": "管理员账号注册成功！请登录以获取管理权限",
   "auth.logoutSuccess": "您已成功退出登录",
   "auth.logoutFailed": "退出失败，请重试",
+  "auth.revoke": "删除账号",
+  "auth.confirmRevoke": "确认删除账号",
+  "auth.confirmRevokePrompt": "确定要彻底删除当前账号吗？此操作不可恢复！",
+  "auth.confirmRevokeOk": "永久删除",
+  "auth.revokeSuccess": "账号删除成功",
+  "auth.revokeFailed": "账号删除失败，请稍后重试",
+  "auth.refuseRevoke": "删除账号",
+  "auth.refuseRevokePrompt": "您的身份为租户管理员，账号暂不支持删除。",
   "auth.adminAccount": "管理员账号",
   "auth.adminAccountDescription": "管理员拥有更多权限，可以配置模型、创建智能体等",
   "auth.admin": "管理员",
