♻️ Refactor: frontend internationalization component optimization #1107

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -14,7 +14,6 @@
   "chatInterface.componentUnmount": "Component Unmounted",
   "chatInterface.errorCancelingRequest": "Error canceling request",
   "chatInterface.requestTimeout": "Request Timeout",
-  "chatInterface.requestTimeoutMessage": "Request exceeded 120 seconds and was automatically canceled",
   "chatInterface.requestTimeoutRetry": "Request timed out, please try again",
   "chatInterface.stopTimeoutRequestFailed": "Failed to stop timed-out request:",
   "chatInterface.refreshDialogListFailedButContinue": "Failed to refresh conversation list, but continuing to send message:",
@@ -28,11 +27,9 @@
   "chatInterface.fileParsingComplete": "File parsing complete",
   "chatInterface.fileParsingCompleteWithTruncation": "File parsing complete: {{truncationInfo}}",
   "chatInterface.truncationSeparator": "; ",
-  "chatInterface.fileProcessingFailed": "File processing failed: {{error}}",
   "chatInterface.fileParsingFailed": "File parsing failed",
   "chatInterface.fileSizeExceeded": "File size exceeds the limit, please upload smaller files",
   "chatInterface.filePreprocessingStopped": "File parsing stopped",
-  "chatInterface.userCancelledRequest": "User canceled the request",
   "chatInterface.conversationStopped": "Conversation stopped",
   "chatInterface.errorProcessingRequest": "An error occurred while processing the request",
   "chatInterface.errorFetchingConversationList": "Failed to fetch conversation list during initialization:",
@@ -40,7 +37,6 @@
   "chatInterface.errorFetchingAttachmentUrl": "Failed to fetch attachment URL: {{object_name}}",
   "chatInterface.renameFailed": "Rename failed:",
   "chatInterface.deleteConversation": "Delete Conversation",
-  "chatInterface.stoppingCurrentConversationBeforeDeleting": "Stopping current conversation before deletion:",
   "chatInterface.stopConversationToDeleteFailed": "Failed to stop conversation for deletion:",
   "chatInterface.deleteFailed": "Delete failed:",
   "chatInterface.imageLoadFailed": "Image failed to load:",
@@ -60,8 +56,6 @@
   "chatPreprocess.preprocessResponseEmpty": "Preprocessing response is empty",
   "chatPreprocess.parsingPreprocessDataFailed": "Failed to parse preprocessing data:",
   "chatPreprocess.filePreprocessingFailed": "File preprocessing failed:",
-  "chatPreprocess.uploadingFile": "Uploading file: {{name}}, type: {{type}}, size: {{size}}",
-  "chatPreprocess.uploadingImage": "Uploading image: {{name}}, type: {{type}}, size: {{size}}",
   "chatPreprocess.fileUploadFailed": "File upload failed:",
   "chatPreprocess.parsingFile": "Parsing file...",
 
@@ -221,7 +215,6 @@
   "chatStreamHandler.callingTool": "Calling tool...",
   "chatStreamHandler.parseSearchContentFailed": "Failed to parse search content:",
   "chatStreamHandler.processImageDataFailed": "Failed to process image data:",
-  "chatStreamHandler.parseSSEFailed": "Failed to parse SSE data:",
   "chatStreamHandler.processRemainingDataFailed": "Failed to process remaining data:",
   "chatStreamHandler.thinking": "Thinking...",
   "chatStreamHandler.connectingMcpServer": "Connecting to MCP server...",
@@ -460,7 +453,6 @@
   "knowledgeBase.description.default": "Knowledge base created through document upload",
   "knowledgeBase.empty.title": "No Knowledge Base Selected",
   "knowledgeBase.empty.description": "Please select a knowledge base from the list on the left, or create a new one",
-  "knowledgeBase.log.documentsPolled": "Polling service retrieved {{count}} documents",
   "knowledgeBase.error.createUpload": "Failed to create knowledge base or upload files:",
   "knowledgeBase.error.getSummary": "Failed to generate knowledge base summary:",
   "knowledgeBase.name.new": "new_base",
@@ -739,10 +731,6 @@
   "auth.inviteCodeHint.projectLink": "project page",
   "auth.inviteCodeHint.starAction": " and give us a Star",
 
-  "role_admin": "Admin",
-
-  "role_user": "User",
-
   "toolManagement.refresh.title": "Refresh Tools List",
   "toolManagement.refresh.button.refreshing": "Refreshing",
   "toolManagement.refresh.button.refresh": "Refresh Tools",
@@ -753,12 +741,6 @@
   "toolManagement.message.refreshFailed": "Failed to refresh tools list",
   "toolManagement.message.refreshFailedRetry": "Failed to refresh tools list, please try again later",
 
-  "debug.console.refreshToolsFailed": "Failed to refresh tools list:",
-  "debug.console.loadAgentDetailsFailed": "Failed to load Agent details:",
-  "debug.console.importAgentFailed": "Failed to import Agent:",
-  "debug.console.exportAgentFailed": "Failed to export Agent:",
-  "debug.console.deleteAgentFailed": "Failed to delete Agent:",
-  "debug.console.fetchAgentListFailed": "Failed to fetch Agent list:",
 
   "mcpConfig.modal.title": "MCP Server Configuration",
   "mcpConfig.modal.close": "Close",
@@ -828,12 +810,17 @@
 
   "agentConfig.tools.refreshSuccess": "Tool list refreshed successfully",
   "agentConfig.tools.refreshFailed": "Failed to refresh tool list",
-  "agentConfig.debug.refreshToolsFailed": "Failed to refresh tool list:",
-  "agentConfig.error.fetchToolsFailed": "Failed to fetch tools list, please try again later",
-  "agentConfig.error.fetchAgentListFailed": "Failed to fetch agent list, please try again later",
-  "agentConfig.error.fetchCreatingSubAgentIdFailed": "Failed to fetch creating sub agent ID, please try again later",
-  "agentConfig.error.fetchAgentDetailsFailed": "Failed to fetch agent details, please try again later",
-  "agentConfig.error.fetchAgentCallRelationshipFailed": "Failed to fetch agent call relationship, please try again later",
+  "agentConfig.tools.fetchFailed": "Failed to fetch tools list, please try again later",
+  "agentConfig.agents.listFetchFailed": "Failed to fetch agent list, please try again later",
+  "agentConfig.agents.createSubAgentIdFailed": "Failed to fetch creating sub agent ID, please try again later",
+  "agentConfig.agents.detailsFetchFailed": "Failed to fetch agent details, please try again later",
+  "agentConfig.agents.callRelationshipFetchFailed": "Failed to fetch agent call relationship, please try again later",
+  "agentConfig.tools.refreshFailedDebug": "Failed to refresh tools list:",
+  "agentConfig.agents.detailsLoadFailed": "Failed to load Agent details:",
+  "agentConfig.agents.importFailed": "Failed to import Agent:",
+  "agentConfig.agents.exportFailed": "Failed to export Agent:",
+  "agentConfig.agents.deleteFailed": "Failed to delete Agent:",
+  "agentConfig.agents.listFetchFailedDebug": "Failed to fetch Agent list:",
 
   "embedding.emptyWarningModal.title": "No Embedding Model Selected",
   "embedding.emptyWarningModal.content": "You have not selected an Embedding model. The knowledge base configuration, memory functions and some agent tools will be unavailable.",
