🐛 Record the settings of tools

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -351,6 +351,10 @@
   "toolConfig.message.saveError": "Save failed",
   "toolConfig.message.saveFailed": "Save failed, please try again later",
   "toolConfig.message.requiredFields": "The following required fields are not filled: ",
+  "toolConfig.message.loadLastConfig": "Load Last Configuration",
+  "toolConfig.message.loadLastConfigSuccess": "Last configuration loaded successfully",
+  "toolConfig.message.loadLastConfigFailed": "Failed to load last configuration",
+  "toolConfig.message.loadLastConfigNotFound": "No last configuration found",
   "toolConfig.input.model.placeholder": "Please select model",
   "toolConfig.input.string.placeholder": "Please enter {{name}}",
   "toolConfig.input.array.placeholder": "Please enter JSON array",
