--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -352,6 +352,10 @@
   "toolConfig.message.saveError": "保存失败",
   "toolConfig.message.saveFailed": "保存失败，请稍后重试",
   "toolConfig.message.requiredFields": "以下必填字段未填写: ",
+  "toolConfig.message.loadLastConfig": "加载上一次配置",
+  "toolConfig.message.loadLastConfigSuccess": "上一次配置加载成功",
+  "toolConfig.message.loadLastConfigFailed": "加载上一次配置失败",
+  "toolConfig.message.loadLastConfigNotFound": "未找到上一次配置",
   "toolConfig.input.model.placeholder": "请选择模型",
   "toolConfig.input.string.placeholder": "请输入{{name}}",
   "toolConfig.input.array.placeholder": "请输入JSON数组",
