✨ Model config now shows provider icon based on the base url of the models 🐛 Bugfix: optimize the model batch add logic to eliminate the name inconsistency (won't work for existing models) 🐛 Bugfix: knowledge base selection tag size abnormal

--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -483,7 +483,7 @@
   "document.summary.saveError": "保存总结失败",
   "document.summary.saveFailed": "保存失败",
   "document.summary.title": "知识库总结",
-  "document.summary.modelLabel": "模型",
+  "document.summary.modelLabel": "大语言模型",
   "document.summary.modelPlaceholder": "选择模型",
   "document.status.creating": "创建中...",
   "document.status.loadingList": "正在加载文档列表...",
@@ -561,7 +561,7 @@
   "model.dialog.error.modelNotFound": "模型未找到",
   "model.dialog.error.serverError": "服务器内部错误，请稍后重试",
   "model.type.llm": "大语言模型",
-  "model.type.embedding": "向量化模型",
+  "model.type.embedding": "向量模型",
   "model.type.vlm": "视觉语言模型",
   "model.type.rerank": "重排模型",
   "model.type.stt": "语音识别模型",
@@ -587,7 +587,7 @@
   "model.source.openai": "OpenAI",
   "model.source.silicon": "硅基流动",
   "model.warning.updateNotFound": "未找到要更新的模型: {{displayName}}, 类型: {{type}}",
-  "model.type.main": "模型",
+  "model.type.main": "大语言模型",
   "model.select.placeholder": "选择模型",
   "model.group.modelEngine": "ModelEngine模型",
   "model.group.custom": "自定义模型",
@@ -616,11 +616,11 @@
   "appConfig.icon.saveErrorLog": "保存图标设置失败:",
 
   "modelConfig.category.llm": "大语言模型",
-  "modelConfig.category.embedding": "向量化模型",
+  "modelConfig.category.embedding": "向量模型",
   "modelConfig.category.reranker": "重排模型",
   "modelConfig.category.multimodal": "多模态模型",
   "modelConfig.category.voice": "语音模型",
-  "modelConfig.option.mainModel": "模型",
+  "modelConfig.option.mainModel": "大语言模型",
   "modelConfig.option.embeddingModel": "向量模型",
   "modelConfig.option.multiEmbeddingModel": "多模态向量模型",
   "modelConfig.option.rerankerModel": "重排模型",
@@ -641,7 +641,7 @@
   "businessLogic.title": "描述 Agent 应该如何工作",
   "businessLogic.placeholder": "请描述您的业务场景和需求...",
   "businessLogic.config.title": "配置Agent能力",
-  "businessLogic.config.model": "模型",
+  "businessLogic.config.model": "大语言模型",
   "businessLogic.config.modelPlaceholder": "请选择模型",
   "businessLogic.config.maxSteps": "Agent运行最大步骤数",
   "businessLogic.config.button.generatePrompt": "生成智能体",
@@ -841,33 +841,33 @@
   "agentConfig.error.fetchAgentDetailsFailed": "获取Agent详情失败，请稍后重试",
   "agentConfig.error.fetchAgentCallRelationshipFailed": "获取Agent调用关系失败，请稍后重试",
 
-  "embedding.emptyWarningModal.title": "未选择向量化模型",
-  "embedding.emptyWarningModal.content": "您未选择向量化模型，后续知识库配置、记忆功能、知识检索工具以及其他部分 Agent 工具将无法使用。",
-  "embedding.emptyWarningModal.tip": "建议您在模型配置中选择合适的向量化模型，以获得完整体验。",
+  "embedding.emptyWarningModal.title": "未选择向量模型",
+  "embedding.emptyWarningModal.content": "您未选择向量模型，后续知识库配置、记忆功能、知识检索工具以及其他部分 Agent 工具将无法使用。",
+  "embedding.emptyWarningModal.tip": "建议您在模型配置中选择合适的向量模型，以获得完整体验。",
   "embedding.emptyWarningModal.cancel": "返回配置",
   "embedding.emptyWarningModal.ok_continue": "我知道了，继续下一步",
-  "embedding.unavaliableWarningModal.title": "向量化模型连通性未确认",
-  "embedding.unavaliableWarningModal.content": "您选择的向量化模型尚未确认连通。强行继续可能导致后续知识库创建、记忆生成、Agent工具调用等功能出现无法预知的错误，影响您的正常体验。",
+  "embedding.unavaliableWarningModal.title": "向量模型连通性未确认",
+  "embedding.unavaliableWarningModal.content": "您选择的向量模型尚未确认连通。强行继续可能导致后续知识库创建、记忆生成、Agent工具调用等功能出现无法预知的错误，影响您的正常体验。",
   "embedding.unavaliableWarningModal.tip": "建议您等待连通性检测完成后再继续操作。",
   "embedding.unavaliableWarningModal.cancel": "返回配置",
   "embedding.unavaliableWarningModal.ok": "我知道了，继续下一步",
-  "embedding.modifyWarningModal.title": "修改向量化模型",
-  "embedding.modifyWarningModal.content": "您正在尝试修改已生效的向量化模型配置。这会导致先前使用该模型清洗的文件、创建的知识库、生成的记忆条目等均被暂时禁用。",
+  "embedding.modifyWarningModal.title": "修改向量模型",
+  "embedding.modifyWarningModal.content": "您正在尝试修改已生效的向量模型配置。这会导致先前使用该模型清洗的文件、创建的知识库、生成的记忆条目等均被暂时禁用。",
   "embedding.modifyWarningModal.ok_proceed": "立即修改",
   "embedding.modifyWarningModal.cancel": "取消",
-  "embedding.knowledgeBaseDisabledWarningModal.title": "您尚未配置向量化模型，暂时无法使用知识库功能。",
+  "embedding.knowledgeBaseDisabledWarningModal.title": "您尚未配置向量模型，暂时无法使用知识库功能。",
   "embedding.knowledgeBaseAutoDeselectModal.title": "自动移除不兼容知识库",
-  "embedding.knowledgeBaseAutoDeselectModal.content": "由于您已修改向量化模型配置，已自动取消选中不兼容的知识库。",
+  "embedding.knowledgeBaseAutoDeselectModal.content": "由于您已修改向量模型配置，已自动取消选中不兼容的知识库。",
   "embedding.agentToolAutoDeselectModal.title": "自动移除无法使用的 Agent 工具",
-  "embedding.agentToolAutoDeselectModal.content": "由于您尚未配置向量化模型，已自动取消选中无法使用的 Agent 工具。",
-  "embedding.agentToolDisableTooltip.content": "您尚未配置向量化模型，无法使用依赖向量化能力的 Agent 工具",
-  "embedding.chatMemoryWarningModal.title": "向量化模型未配置",
-  "embedding.chatMemoryWarningModal.content": "您尚未配置向量化模型，暂时无法使用记忆功能。",
+  "embedding.agentToolAutoDeselectModal.content": "由于您尚未配置向量模型，已自动取消选中无法使用的 Agent 工具。",
+  "embedding.agentToolDisableTooltip.content": "您尚未配置向量模型，无法使用依赖向量化能力的 Agent 工具",
+  "embedding.chatMemoryWarningModal.title": "向量模型未配置",
+  "embedding.chatMemoryWarningModal.content": "您尚未配置向量模型，暂时无法使用记忆功能。",
   "embedding.chatMemoryWarningModal.tip": "建议您联系您的租户管理员进行配置。",
   "embedding.chatMemoryWarningModal.ok_config": "前往配置",
   "embedding.chatMemoryWarningModal.ok": "取消",
   "embedding.chatMemoryAutoDeselectModal.title": "自动关闭无法使用的记忆功能",
-  "embedding.chatMemoryAutoDeselectModal.content": "由于您尚未配置向量化模型，已自动关闭记忆功能。",
+  "embedding.chatMemoryAutoDeselectModal.content": "由于您尚未配置向量模型，已自动关闭记忆功能。",
   "embedding.chatMemoryAutoDeselectModal.tip": "建议您联系您的租户管理员进行配置。",
   "embedding.chatMemoryAutoDeselectModal.ok_config": "前往配置",
   "embedding.chatMemoryAutoDeselectModal.ok": "取消",
